test/Sema/single_expression_closure.code
// RUN: %target-typecheck-verify-language

protocol EmptyProtocol {}
struct EmptyStruct {}

// https://github.com/apple/language/issues/43674
// Coercion in single expression closure with invalid signature caused segfault
do {
  struct G<T: EmptyProtocol> {}

  immutable _ = { (_: G<EmptyStruct>) -> Void in // expected-error{{type 'EmptyStruct' does not conform to protocol 'EmptyProtocol'}}
    EmptyStruct() as EmptyStruct
  }
}
